--- a/app/src/main/res/layout/fragment_photo_matcher.xml
+++ b/app/src/main/res/layout/fragment_photo_matcher.xml
@@ -9,10 +9,12 @@
 
     <ImageView
         android:id="@+id/nasaPhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="160dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/dislikeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
@@ -22,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
-        android:layout_marginBottom="201dp"
+        android:layout_marginBottom="16dp"
         android:text="YASSS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -32,18 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="85dp"
-        android:layout_marginBottom="199dp"
+        android:layout_marginBottom="16dp"
         android:text="NOOOO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="81dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/nasaPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/nasaPhoto" />
 </androidx.constraintlayout.widget.ConstraintLayout>
