--- a/app/src/main/res/layout/fragment_photo_matcher.xml
+++ b/app/src/main/res/layout/fragment_photo_matcher.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+    <data>
+        <variable name="viewmodel" type="com.grandefirano.spaceforlove.ui.photoMatcher.PhotoMatcherViewModel"/>
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,6 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        imageUrl="@{viewmodel.nasaPhotos.url}"
         app:layout_constraintBottom_toTopOf="@+id/dislikeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -40,3 +47,4 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
