--- a/app/src/main/res/layout/card_view_space_photo.xml
+++ b/app/src/main/res/layout/card_view_space_photo.xml
@@ -49,7 +49,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    tools:text="Emma Watson, 26" />
+                    tools:text="Andromeda" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
                     android:text="@{photoOfTheDay.date}"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
-                    tools:text="5 Miles Away" />
+                    tools:text="2020-06-30" />
 
             </LinearLayout>
             <FrameLayout
