--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -72,19 +72,13 @@
             android:onClick="login"
             android:text="Sign In" />
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/loginWithFacebookButton"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp" />
-
 
         <TextView
             android:id="@+id/goToRegisterButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:onClick="goToRegister"
+            android:onClick="@{viewmodel.goToRegister}"
             android:padding="2dp"
             android:text="Sign Up" />
     </LinearLayout>
