--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:onClick="register"
+                android:onClick="@{viewmodel.registerWithPassword}"
                 android:text="SignUp" />
 
             <TextView
