--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -69,7 +69,7 @@
             android:id="@+id/loginButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:onClick="login"
+            android:onClick="@{viewmodel.loginWithPassword}"
             android:text="Sign In" />
 
 
