--- a/app/src/main/res/layout/fragment_matching_result.xml
+++ b/app/src/main/res/layout/fragment_matching_result.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.grandefirano.spaceforlove.ui.matchingResult.MatchingResultViewModel" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -54,7 +61,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
-        android:text="0"
+        tools:text="0"
+        android:text="@{String.valueOf(viewmodel.dislikes)}"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/numOfLikesTV"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,9 +75,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginBottom="32dp"
-        android:text="0"
+        tools:text="0"
+        android:text="@{String.valueOf(viewmodel.likes)}"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="@+id/imageView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
