--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -61,6 +61,9 @@
         <argument
             android:name="dislikes"
             app:argType="integer" />
+        <argument
+            android:name="listOfPhotos"
+            app:argType="com.grandefirano.spaceforlove.data.entity.NasaPhotoOfTheDay[]" />
     </fragment>
     <fragment
         android:id="@+id/login_fragment"
