with pull to refresh matching in MatchListFragment with getReviewForUserId

--- a/app/src/main/res/layout/fragment_match_list.xml
+++ b/app/src/main/res/layout/fragment_match_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,6 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.matchList.MatchListFragment">
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/pullToRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <SeekBar
         android:id="@+id/seekBar"
         style="@android:style/Widget.Material.SeekBar.Discrete"
@@ -17,7 +22,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:ignore="NewApi" />
 
     <TextView
         android:id="@+id/percentageOfMatchTV"
@@ -47,4 +53,6 @@
         android:text="100%"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="@+id/seekBar" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
